[package]
name = "max7301"
description = "Driver for the MAX7301 serial I/O expander"
version = "0.1.0"
authors = ["Kyle Schaffrick <kyle@raidi.us>"]
keywords = ["no-std", "spi", "io-expander", "embedded", "embedded-hal-driver"]
repository = "https://github.com/edarc/max7301"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".gitignore",
]

[dependencies]
embedded-hal = "0.2"

[dependencies.cortex-m]
version = "0.5.2"
optional = true

[dev-dependencies]
proptest = "0.9"

[features]
default = ["std", "unproven"]
std = []
unproven = ["embedded-hal/unproven"]
cortexm = ["cortex-m"]
